--- a/department-service.properties
+++ b/department-service.properties
@@ -7,3 +7,4 @@ spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql=true
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.boot.message="Hello"
