--- a/department-service.properties
+++ b/department-service.properties
@@ -1,10 +1,9 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/department_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
-##spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.format_sql=true
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+server.port = 8080
+#spring.config.import=optional:config-server:http://localhost:8888
 spring.boot.message="Hello"
