--- a/department-service.properties
+++ b/department-service.properties
@@ -5,5 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 server.port = 8080
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #spring.config.import=optional:config-server:http://localhost:8888
 spring.boot.message="Hello"
