--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/employee_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 ##spring.jpa.generate-ddl=true
