--- a/employee-service.properties
+++ b/employee-service.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port = 8081
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.boot.message="Hello Department Service"
