--- a/department-service.properties
+++ b/department-service.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 server.port = 8080
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #spring.config.import=optional:config-server:http://localhost:8888
-spring.boot.message="Hello Department Service"
+spring.boot.message="Hello Department Service Bus config"
